--- a/web/static/css/home.css
+++ b/web/static/css/home.css
@@ -644,6 +644,18 @@
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.6); }
+  #login .contain.ng-enter {
+    transform: rotateY(90deg) translateY(-50%);
+    opacity: 0; }
+  #login .contain.ng-enter-active {
+    transform: rotateY(0deg) translateY(-50%);
+    opacity: 1; }
+  #login .contain.ng-leave {
+    transform: rotateY(90deg) translateY(-50%);
+    opacity: 1; }
+  #login .contain.ng-leave-active {
+    transform: rotateY(0deg) translateY(-50%);
+    opacity: 0; }
   #login .contain {
     width: 500px;
     margin: auto;
@@ -658,7 +670,8 @@
     -o-transform: translateY(-50%);
     padding: 24px 40px 40px;
     box-sizing: border-box;
-    border-radius: 4px; }
+    border-radius: 4px;
+    transition: transform 1s ease; }
     #login .contain a {
       font-size: 16px; }
     #login .contain .close {
