--- a/web/static/template/Modify.html
+++ b/web/static/template/Modify.html
@@ -11,13 +11,13 @@
                     <label class="text-danger control-label">密码长度不可超过22位</label>
                 </div>
                 <div class="col-sm-5" ng-show="myForm.currentPassword.$error.minlength">
-                    <label class="text-danger control-label">密码长度不可小于6位</label>
+                    <label class="text-danger control-label"><span>×</span>密码长度不可小于6位</label>
                 </div>
             </div>
             <div class="form-group" ng-class="{'has-error':myForm.password.$dirty&&myForm.password.$invalid}">
                 <label  class="col-sm-1 control-label">新建密码</label>
                 <div class="col-sm-5">
-                    <input type="text" name="password" ng-required="true" ng-pattern="/^[\@A-Za-z0-9\!\#\$\%\^\&\*\.\~]{6,22}$/" ng-minlength="6" ng-maxlength="22" class="form-control" ng-model="data.password" placeholder="新建密码">
+                    <input type="text" name="password" ng-required="true" ng-pattern="/^(?=.*[a-zA-Z])(?=.*[0-9])[a-zA-Z0-9]{2,}$/" ng-minlength="6" ng-maxlength="22" class="form-control" ng-model="data.password" placeholder="新建密码">
                 </div>
                 <div class="col-sm-5" ng-show="myForm.password.$error.maxlength">
                     <label class="text-danger control-label">密码长度不可超过22位</label>
