--- a/web/static/css/indexhome.css
+++ b/web/static/css/indexhome.css
@@ -85,7 +85,8 @@
   width: 100%;
   background: #e2e5ec;
   padding-top: 20px;
-  position: relative; }
+  position: relative;
+  padding-bottom: 20px; }
   #whaleAPI .whaleAPI {
     min-height: 1000px; }
     #whaleAPI .whaleAPI .API {
@@ -377,6 +378,10 @@
             list-style: none;
             margin: 0 0 0 2em !important;
             padding: 0; }
+    .APIdetail2_contain .detail #echarts_API {
+      width: 100%;
+      height: 400px;
+      padding: 20px; }
 
 #APIdetail {
   width: 100%;
