--- a/web/static/css/indexhome.scss
+++ b/web/static/css/indexhome.scss
@@ -99,6 +99,7 @@
   background: #e2e5ec;
   padding-top:20px;
   position: relative;
+  padding-bottom: 20px;
   .whaleAPI{
     min-height: 1000px;
     .API{
@@ -447,6 +448,11 @@
           }
         }
       }
+    }
+    #echarts_API{
+      width: 100%;
+      height: 400px;
+      padding: 20px;
     }
   }
 }
