--- a/web/static/template/APIdetail.html
+++ b/web/static/template/APIdetail.html
@@ -13,7 +13,7 @@
                 <div class="you1">{{api.apiName}}</div>
                 <div class="you2">{{api.apidesc}}</div>
                 <div class="you3">
-                    <span class="span1" ng-click="APITry()" data-toggle="modal" data-target="#myModalAPITry">免费试用</span>
+                    <span class="span1" data-toggle="modal" data-target="#myModalAPITry">免费试用</span>
                     <span class="span2" data-toggle="modal" data-target="#myModalAPIBuy">立即购买</span>
                 </div>
             </div>
@@ -61,18 +61,21 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" style="width: 70px;padding: 7px 0;color: #464646">购买次数:</label>
                     <div class="col-sm-10" style="width: 400px">
-                        <input type="text" class="form-control" placeholder="请输入购买次数">
+                        <input type="text" ng-model="buyInfo.chargeCount" class="form-control" placeholder="请输入购买次数">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" style="width: 70px;padding: 7px 0; color: #464646">买家留言:</label>
                     <div class="col-sm-10" style="width: 400px">
-                        <textarea class="form-control" rows="5" placeholder="请简单描述你的购买需求"></textarea>
+                        <textarea class="form-control" ng-model="buyInfo.remark" rows="5" placeholder="请简单描述你的购买需求"></textarea>
                     </div>
                 </div>
             </div>
+            <div class="alert alert-danger text-center" ng-show="buyFlag">
+                {{buyFlagWen}}
+            </div>
             <div class="modal-footer" style="text-align: center;border-top: none;padding: 0px 15px 30px 80px;">
-                <button type="button" class="btn btn-success" style="width: 185px;border-color:#ff7300;font-size: 14px;color: #fff;background-color: #ff7300">
+                <button type="button" ng-click="buy()" class="btn btn-success" style="width: 185px;border-color:#ff7300;font-size: 14px;color: #fff;background-color: #ff7300">
                     立即购买
                 </button>
                 <button type="button" class="btn btn-default" data-dismiss="modal" style="width: 185px;font-size: 14px;color: #ff7300;border: 1px solid #ff7300">我再想想
@@ -94,7 +97,7 @@
                 您的订单已提交,我们会在第一时间联系您
             </div>
             <div class="modal-footer" style="text-align: center;border-top: none;">
-                <button type="button" ng-click="lijiTry()" class="btn btn-success" data-dismiss="modal" style="width: 185px;border-color:#ff7300;font-size: 14px;color: #fff;background-color: #ff7300">
+                <button type="button" class="btn btn-success" data-dismiss="modal" style="width: 185px;border-color:#ff7300;font-size: 14px;color: #fff;background-color: #ff7300">
                     确定
                 </button>
             </div>
