--- a/web/static/template/Modify.html
+++ b/web/static/template/Modify.html
@@ -5,10 +5,10 @@
             <div class="form-group" ng-class="{'has-error':myForm.currentPassword.$dirty&&myForm.currentPassword.$invalid}">
                 <label class="col-sm-1 control-label">当前密码</label>
                 <div class="col-sm-5">
-                    <input type="text" name="currentPassword" ng-model="data.currentPassword" ng-required="true" ng-minlength="6" ng-maxlength="22" class="form-control" placeholder="当前密码">
+                    <input type="password" name="currentPassword" ng-model="data.currentPassword" ng-required="true" ng-minlength="6" ng-maxlength="22" class="form-control" placeholder="当前密码">
                 </div>
                 <div class="col-sm-5" ng-show="myForm.currentPassword.$error.maxlength">
-                    <label class="text-danger control-label">密码长度不可超过22位</label>
+                    <label class="text-danger control-label"><span>×</span>密码长度不可超过22位</label>
                 </div>
                 <div class="col-sm-5" ng-show="myForm.currentPassword.$error.minlength">
                     <label class="text-danger control-label"><span>×</span>密码长度不可小于6位</label>
@@ -17,25 +17,25 @@
             <div class="form-group" ng-class="{'has-error':myForm.password.$dirty&&myForm.password.$invalid}">
                 <label  class="col-sm-1 control-label">新建密码</label>
                 <div class="col-sm-5">
-                    <input type="text" name="password" ng-required="true" ng-pattern="/^(?=.*[a-zA-Z])(?=.*[0-9])[a-zA-Z0-9]{2,}$/" ng-minlength="6" ng-maxlength="22" class="form-control" ng-model="data.password" placeholder="新建密码">
+                    <input type="password" name="password" ng-required="true" ng-pattern="/^(?=.*[a-zA-Z])(?=.*[0-9])[a-zA-Z0-9]{2,}$/" ng-minlength="6" ng-maxlength="22" class="form-control" ng-model="data.password" placeholder="新建密码">
                 </div>
                 <div class="col-sm-5" ng-show="myForm.password.$error.maxlength">
-                    <label class="text-danger control-label">密码长度不可超过22位</label>
+                    <label class="text-danger control-label"><span>×</span>密码长度不可超过22位</label>
                 </div>
                 <div class="col-sm-5" ng-show="myForm.password.$error.minlength">
-                    <label class="text-danger control-label">密码长度不可小于6位</label>
+                    <label class="text-danger control-label"><span>×</span>密码长度不可小于6位</label>
                 </div>
                 <div class="col-sm-5" ng-show="myForm.password.$error.pattern">
-                    <label class="text-danger control-label">新建密码须为数字与字母的组合</label>
+                    <label class="text-danger control-label"><span>×</span>新建密码须为数字与字母的组合</label>
                 </div>
             </div>
             <div class="form-group" ng-class="{'has-error':myForm.passwordComire.$dirty&&myForm.passwordComire.$invalid||(myForm.passwordComire.$dirty&&myForm.passwordComire.$dirty&&myForm.password.$dirty&&data.passwordComire!=data.password)}">
                 <label class="col-sm-1 control-label">确认密码</label>
                 <div class="col-sm-5">
-                    <input type="text" name="passwordComire" ng-required="true" class="form-control" ng-model="data.passwordComire" placeholder="确认密码">
+                    <input type="password" name="passwordComire" ng-required="true" class="form-control" ng-model="data.passwordComire" placeholder="确认密码">
                 </div>
                 <div class="col-sm-5" ng-show="myForm.passwordComire.$dirty&&myForm.password.$dirty&&data.passwordComire!=data.password">
-                    <label class="text-danger control-label">两次密码输入不一致！</label>
+                    <label class="text-danger control-label"><span>×</span>两次密码输入不一致！</label>
                 </div>
             </div>
             <div class="form-group">
