--- a/web/static/template/detail.html
+++ b/web/static/template/detail.html
@@ -3,14 +3,14 @@
         <div class="API_zuo">
             <div class="contain">
                 <div class="div1">
-                    <lazy-src image-src="{{picurl}}"></lazy-src>
+                    <lazy-src image-src="{{api.imagepath}}"></lazy-src>
                 </div>
-                <div class="div2">征信类</div>
+                <div class="div2">{{api.apiName}}</div>
             </div>
         </div>
         <div class="API_you">
-            <div class="you1">车辆违章信息</div>
-            <div class="you2">提供全国300多个城市区域的机动车交通违章查询服务,驾驶证违章查询,全国各地车辆的本地异地违章查询,汽车违章查询,摩托车违章查询等。</div>
+            <div class="you1">{{api.apiName}}</div>
+            <div class="you2">{{api.apidesc}}</div>
             <div class="you4">
                 <p>申请时间 : 2017-03-28</p>
                 <p>已调用 <span>0</span>次 总计 <span>100</span>次 剩余 <span>100</span>次</p>
@@ -26,4 +26,60 @@
         </div>
         <detail-api></detail-api>
     </div>
+</div>
+<div class="modal fade" id="myModalAPIBuy" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog m150" style="width: 557px">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: #1085e4;color: #fff;border-radius: 5px;">
+
+                <h4 class="modal-title" style="text-align: center">
+                    提示
+                </h4>
+            </div>
+            <div class="modal-body form-horizontal" style="padding:55px 55px 20px;">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" style="width: 70px;padding: 7px 0;color: #464646">购买次数:</label>
+                    <div class="col-sm-10" style="width: 400px">
+                        <input type="text" ng-model="buyInfo.chargeCount" class="form-control" placeholder="请输入购买次数">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" style="width: 70px;padding: 7px 0; color: #464646">买家留言:</label>
+                    <div class="col-sm-10" style="width: 400px">
+                        <textarea class="form-control" ng-model="buyInfo.remark" rows="5" placeholder="请简单描述你的购买需求"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="alert alert-danger text-center" ng-show="buyFlag">
+                {{buyFlagWen}}
+            </div>
+            <div class="modal-footer" style="text-align: center;border-top: none;padding: 0px 15px 30px 80px;">
+                <button type="button" ng-click="buy()" class="btn btn-success" style="width: 185px;border-color:#ff7300;font-size: 14px;color: #fff;background-color: #ff7300">
+                    立即购买
+                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" style="width: 185px;font-size: 14px;color: #ff7300;border: 1px solid #ff7300">我再想想
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+<div class="modal fade" id="myModalAPITip" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog m150" style="width: 480px">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: #1085e4;color: #fff;border-radius: 5px;">
+
+                <h4 class="modal-title" style="text-align: center">
+                    提示
+                </h4>
+            </div>
+            <div class="modal-body" style="padding:55px 50px 25px;">
+                您的订单已提交,我们会在第一时间联系您
+            </div>
+            <div class="modal-footer" style="text-align: center;border-top: none;">
+                <button type="button" class="btn btn-success" data-dismiss="modal" style="width: 185px;border-color:#ff7300;font-size: 14px;color: #fff;background-color: #ff7300">
+                    确定
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
 </div>
