--- a/web/static/css/API.scss
+++ b/web/static/css/API.scss
@@ -561,8 +561,8 @@
       }
       .APIKEY2{
         display: none;
-        height: 200px;
         padding-left: 20px;
+        padding-bottom: 20px;
         background: #fff;
         .co1{
           height: 50px;
@@ -612,6 +612,7 @@
               margin-left: 20px;
               background: rgba(22, 155, 213, 1);
               border-radius: 5px;
+              cursor: pointer;
             }
           }
           .c3{
@@ -623,6 +624,7 @@
             margin-left: 115px;
             background: rgba(22, 155, 213, 1);
             border-radius: 5px;
+            cursor: pointer;
           }
         }
       }
@@ -640,8 +642,8 @@
       }
       .PHONE2{
         display: none;
-        height: 300px;
         padding-left: 20px;
+        padding-bottom: 20px;
         background: #fff;
         border-radius: 5px;
         .co1{
@@ -695,6 +697,7 @@
               margin-left: 20px;
               background: rgba(22, 155, 213, 1);
               border-radius: 5px;
+              cursor: pointer;
             }
           }
           .c3{
@@ -707,6 +710,7 @@
             background: rgba(22, 155, 213, 1);
             border-radius: 5px;
             margin-bottom: 20px;
+            cursor: pointer;
           }
         }
       }
@@ -724,8 +728,8 @@
       }
       .EMAIL2{
         display: none;
-        height: 200px;
         padding-left: 20px;
+        padding-bottom: 20px;
         background: #fff;
         .co1{
           height: 50px;
@@ -774,6 +778,7 @@
             margin-left: 115px;
             background: rgba(22, 155, 213, 1);
             border-radius: 5px;
+            cursor: pointer;
           }
         }
       }
