--- a/web/static/template/Account.html
+++ b/web/static/template/Account.html
@@ -7,12 +7,12 @@
                 <button class="btn1">Toggle</button>
             </p>-->
             <div class="con1">用户名</div>
-            <div class="con2">是滴是滴所多</div>
+            <div class="con2">{{infoAccount.loginName}}</div>
         </div>
         <div class="contain2">
             <div class="APIKEY1">
                 <div class="con1">APIKEY</div>
-                <div class="con2">APIKEYAPIKEYAPIKEYAPIKEY</div>
+                <div class="con2">{{infoAccount.apiSercret}}</div>
                 <div class="con3 APIKEYkey1 APIKEYkey2">重置</div>
             </div>
             <div class="APIKEY2">
@@ -23,21 +23,22 @@
                 <div class="co2">
                     <div class="c1">
                         <span>手机号:</span>
-                        <input disabled type="text">
+                        <input disabled type="text" ng-model="infoAccount.phone">
                     </div>
                     <div class="c2">
-                        <span class="span1">验证码:</span>
-                        <input type="text">
-                        <span class="span2">发送验证码</span>
+                        <span id="YZM1" class="span1">验证码:</span>
+                        <input type="text" ng-model="infoAccount.YZM1">
+                        <span class="span2" ng-click="APIKEY_yzm()">发送验证码</span>
                     </div>
-                    <div class="c3">确定</div>
+                    <div class="alert alert-danger" style="width: 50%" ng-if="error">{{error_wenzi}}</div>
+                    <div class="c3" ng-click="APIKEY()">确定</div>
                 </div>
             </div>
         </div>
         <div class="contain3">
             <div class="PHONE1">
                 <div class="con1">手机号码</div>
-                <div class="con2">1560827822</div>
+                <div class="con2">{{infoAccount.phone}}</div>
                 <div class="con3 PHONEkey1 PHONEkey2">修改</div>
             </div>
             <div class="PHONE2">
@@ -48,18 +49,19 @@
                 <div class="co2">
                     <div class="c1">
                         <span>手机号:</span>
-                        <input disabled type="text">
+                        <input disabled type="text" ng-model="infoAccount.phone">
                     </div>
                     <div class="c1 a">
                         <span>新手机号:</span>
-                        <input type="text">
+                        <input type="text" ng-model="infoAccount.phone1">
                     </div>
                     <div class="c2">
-                        <span class="span1">验证码:</span>
-                        <input type="text">
-                        <span class="span2">发送验证码</span>
+                        <span class="span1" id="YZM2">验证码:</span>
+                        <input type="text" ng-model="infoAccount.YZM2">
+                        <span class="span2" ng-click="PHONE_yzm()">发送验证码</span>
                     </div>
-                    <div class="c3">确定</div>
+                    <div class="alert alert-danger" style="width: 50%" ng-if="error1">{{error_wenzi1}}</div>
+                    <div class="c3" ng-click="phone()">确定</div>
                     <div class="c4">温馨提示：若您收不到短信或手机号码已停止使用，可联系客服申请人工更换绑定手机</div>
                 </div>
             </div>
@@ -67,7 +69,7 @@
         <div class="contain4">
             <div class="EMAIL1">
                 <div class="con1">邮箱地址</div>
-                <div class="con2">537874388@juxinli.com</div>
+                <div class="con2">{{infoAccount.email}}</div>
                 <div class="con3 EMAILkey1 EMAILkey2">修改</div>
             </div>
             <div class="EMAIL2">
@@ -78,11 +80,11 @@
                 <div class="co2">
                     <div class="c1">
                         <span>邮箱地址:</span>
-                        <input disabled type="text">
+                        <input disabled type="text" ng-model="infoAccount.email">
                     </div>
                     <div class="c2">
                         <span class="span1">新邮箱地址:</span>
-                        <input type="text">
+                        <input type="text" ng-model="infoAccount.email1">
                     </div>
                     <div class="c3">确定</div>
                 </div>
