--- a/web/static/template/homeindex.html
+++ b/web/static/template/homeindex.html
@@ -1,4 +1,4 @@
-<div id="main1"></div>
+<div id="main1"><div></div></div>
 <div id="main2">
     <div class="m1"></div>
     <div class="m2 m" ui-sref="index.whalehome">
