--- a/web/static/template/API.html
+++ b/web/static/template/API.html
@@ -31,6 +31,11 @@
             </div>
         </div>
     </div>
-    <div ng-include="'overHead.html'" id="overHead" ng-controller="overHeadcontroller"></div>
+    <div id="overHead">
+        <div class="overHead">
+            <span class="head_span1" ui-sref="API.Modify">修改密码</span>
+            <span class="head_span2" ng-click="loginout()">退出</span>
+        </div>
+    </div>
     <div ui-view ></div>
 </div>
